# backend/open-api-spec.yaml
@@ -387,18 +387,11 @@ components:
         - $ref: '#/components/schemas/NewUser'
         - required:
             - id
-            - createdAt
           properties:
             id:
               type: integer
               format: int64
               description: unique id of the user
-            createdAt:
-              type: string
-              format: date-time
-            updatedAt:
-              type: string
-              format: date-time
 
     CheckIn:
       type: object
